--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.cidi.obuclient"
         minSdk 21
-        targetSdk 33
+        targetSdk 26
         versionCode 1
         versionName "1.0"
 
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
     implementation files('libs/netty-all-4.1.42.Final.jar')
+    implementation 'androidx.compose.material:material:1.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -62,4 +63,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'commons-net:commons-net:3.7'
+    implementation "com.google.accompanist:accompanist-permissions:0.16.1"
 }
